--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -28,7 +28,7 @@
         <div class="about-content">
             <div class="about-text">
                 <p>GRACE SPAは、18年の経験を持つプロフェッショナルセラピストが運営する完全予約制のプライベートサロンです。</p>
-                <p>ハワイの伝統的なロミロミマッサージを取り入れたオイルセラピーと、タイ政府認定セラピストによるタイ古式マッサージで、お客様一人ひとりに合わせた最高の癒しの時間をご提供いたします。</p>
+                <p>ハワイの伝統的なロミロミマッサージとバリ島のバリニーズマッサージを取り入れたオイルリンパマッサージ、タイ政府認定セラピストによるタイ古式マッサージで、お客様一人ひとりに合わせた最高の癒しの時間をご提供いたします。</p>
             </div>
             <!-- 施術風景の画像エリア -->
             <div class="about-images">
