--- a/templates/base.html
+++ b/templates/base.html
@@ -338,7 +338,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 GRACE SPA. All rights reserved.</p>
+            <p>&copy; 2025 GRACE SPA.</p>
         </div>
     </footer>
 
