--- a/templates/dashboard/base_dashboard.html
+++ b/templates/dashboard/base_dashboard.html
@@ -431,6 +431,11 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="{% url 'dashboard:maintenance_settings' %}" class="nav-link">
+                        🔧 メンテナンス管理
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="/admin/" class="nav-link">
                         ⚙️ システム管理
                     </a>
