--- a/templates/website/home.html
+++ b/templates/website/home.html
@@ -24,7 +24,7 @@
 
 <section id="about" class="section">
     <div class="container">
-        <h2>サロンについて</h2>
+        <h2>GRACE SPA（グレイス スパ）について</h2>
         <div class="about-content">
             <div class="about-text">
                 <p>GRACE SPAは、18年の経験を持つプロフェッショナルセラピストが運営する完全予約制のプライベートサロンです。</p>
@@ -68,15 +68,14 @@
             <div class="access-info">
                 <div class="info-group">
                     <h3>📍 住所</h3>
-                    <p>〒060-0001<br>北海道札幌市中央区北1条西1丁目1-1<br>グレースビル3F</p>
+                    <p>〒064-0809<br>北海道札幌市中央区南9条西4丁目3-15 <br>AMSタワー中島502号室</p>
                 </div>
                 
                 <div class="info-group">
                     <h3>🚃 アクセス</h3>
                     <ul>
-                        <li>JR札幌駅南口より徒歩3分</li>
-                        <li>地下鉄南北線「さっぽろ駅」より徒歩5分</li>
-                        <li>地下鉄東豊線「さっぽろ駅」より徒歩5分</li>
+                        <li>地下鉄南北線「中島公園」より徒歩1分</li>
+                        <li>市電「山鼻9条」より徒歩5分</li>
                     </ul>
                 </div>
                 
@@ -85,27 +84,27 @@
                     <div class="hours-table">
                         <div class="hours-row">
                             <span class="day">平日</span>
-                            <span class="time">10:00～22:00（最終受付 20:30）</span>
+                            <span class="time">12:00～20:00（最終受付 18:30）</span>
                         </div>
                         <div class="hours-row">
                             <span class="day">土曜</span>
-                            <span class="time">10:00～20:00（最終受付 18:30）</span>
+                            <span class="time">12:00～20:00（最終受付 18:30）</span>
                         </div>
                         <div class="hours-row">
                             <span class="day">日祝</span>
-                            <span class="time">10:00～18:00（最終受付 16:30）</span>
+                            <span class="time">12:00～20:00（最終受付 18:30）</span>
                         </div>
                     </div>
                 </div>
                 
                 <div class="info-group">
-                    <h3>📞 お問い合わせ</h3>
+                    <h3>📞 お問い合わせ・キャンセル申込</h3>
                     <div class="contact-info">
                         <p class="phone">
-                            <strong>TEL: <a href="tel:011-123-4567">011-123-4567</a></strong>
+                            <strong>TEL: <a href="tel:080-4158-1586">080-4158-1586</a></strong>
                         </p>
                         <p class="email">
-                            Email: <a href="mailto:info@grace-spa.com">info@grace-spa.com</a>
+                            Email: <a href="mailto:relaxation.grace11@gmail.com">relaxation.grace11@gmail.com</a>
                         </p>
                         <p class="note">※施術中は電話に出られない場合がございます。<br>お急ぎでない場合はWEB予約をご利用ください。</p>
                     </div>
@@ -113,7 +112,7 @@
                 
                 <div class="info-group">
                     <h3>🚗 駐車場</h3>
-                    <p>専用駐車場2台完備<br>満車の場合は近隣のコインパーキングをご利用ください<br>（駐車料金の補助はございません）</p>
+                    <p>無し<br>近隣のコインパーキングをご利用ください<br>（駐車料金の補助はございません）</p>
                 </div>
             </div>
             
@@ -121,8 +120,8 @@
                 <h3>📍 地図</h3>
                 <div class="map-wrapper">
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.083599816607!2d141.34661121534855!3d43.06422997914559!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b299b2480405f%3A0x3a10c3e090c6e4e5!2z5pyt5bmM6aeF!5e0!3m2!1sja!2sjp!4v1234567890123" 
-                        width="100%" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.629396845014!2d141.3509683767311!3d43.0492284912833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5f0b2a278770a115%3A0x90e02f65682d877a!2z44CSMDY0LTA4MDkg5YyX5rW36YGT5pyt5bmM5biC5Lit5aSu5Yy65Y2X77yZ5p2h6KW_77yU5LiB55uu77yT4oiS77yR77yVIEFtcyBUb3dlciDkuK3ls7Y!5e0!3m2!1sja!2sjp!4v1755438071311!5m2!1sja!2sjp" 
+                        width="100%"
                         height="400" 
                         style="border:0; border-radius: 10px;" 
                         allowfullscreen="" 
@@ -130,7 +129,7 @@
                         referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
-                <p class="map-note">※こちらは札幌駅の地図です。実際の住所に合わせて調整してください。</p>
+                <p class="map-note">地下鉄でお越しの方は中島公園駅2番出口を出て右へ歩くとセブンイレブンがあります。セブンイレブンが1階に入っているマンションの5階になります。マンションの入り口はセブンイレブンの角を右に曲がるとあります。玄関入り口に【AMSタワー中島】の記載を確認しましたらインターフォンで502を押してお呼び出しください。(近くにAMSタワーが2軒あります。当マンションは34階のタワーマンションではなく21階建てのマンションです) </p>
             </div>
         </div>
     </div>
